copy static result files to output folder

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,36 +2,30 @@
 <html>
 
 <head>  
+	<meta charset="utf-8" /> 
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript">		
 		var results = new Array();
 	</script>
-	<script type="text/javascript" src="0.js"></script>
-	<script type="text/javascript" src="1.js"></script>
-	<script type="text/javascript" src="2.js"></script>
-	<script type="text/javascript" src="3.js"></script>
-	<script type="text/javascript" src="4.js"></script>
-	<script type="text/javascript" src="6.js"></script>
-	<script type="text/javascript" src="7.js"></script>
-	<script type="text/javascript" src="8.js"></script>
-	<script type="text/javascript" src="9.js"></script>
-	<script type="text/javascript" src="10.js"></script>
-	<script type="text/javascript" src="11.js"></script>
-	<script type="text/javascript" src="12.js"></script>
-	<script type="text/javascript" src="13.js"></script>
-	<script type="text/javascript" src="14.js"></script>
-	<script type="text/javascript" src="15.js"></script>
-	<script type="text/javascript" src="16.js"></script>
-	<script type="text/javascript" src="17.js"></script>
-	<script type="text/javascript" src="18.js"></script>
-	<script type="text/javascript" src="19.js"></script>
+	<script type="text/javascript" src="data.js"></script>
 	<script type="text/javascript" src="d3.min.js"></script>
 	<script type="text/javascript" src="d3-tip.js"></script>
 	<script type="text/javascript" src="functions.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+	<pre class="figAnsi">
+        ,/      
+      ,'/           
+    ,' /        █████╗  ██████╗██████╗  ██████╗  (a)utomated 
+  ,'  /_____,  ██╔══██╗██╔════╝██╔══██╗██╔════╝  (c)ontamination
+.'____    ,'   ███████║██║     ██║  ██║██║       (d)etection and 
+     /  ,'     ██╔══██║██║     ██║  ██║██║       (c)onfidence estimation for NGS data 
+    / ,'       ██║  ██║╚██████╗██████╔╝╚██████╗
+   /,'         ╚═╝  ╚═╝ ╚═════╝╚═════╝  ╚═════╝
+  /'                                          		
+	</pre>
 	<table id="confidences" class="floatLeft">
 		<tr><th>Sample</th><th>Connected Components</th><th>Dip-Means</th><th>Kraken</th></tr>
 	</table>
