float visualization at top of page when scrolling large tables

--- a/assets/index.html
+++ b/assets/index.html
@@ -29,6 +29,7 @@
 	<table id="confidences" class="floatLeft">
 		<tr><th>Sample</th><th>CC</th><th>DIP</th><th>Kraken</th></tr>
 	</table>
+	<div id="scatterContainerAnchor"></div>
 	<div id="scatterContainer" class="floatLeft">
 		<fieldset>
 			<legend><b>Select data:</b></legend>
