--- a/assets/index.html
+++ b/assets/index.html
@@ -27,7 +27,7 @@
   /'                                          		
 	</pre>
 	<table id="confidences" class="floatLeft">
-		<tr><th>Sample</th><th>CC</th><th>DIP</th><th>Kraken</th></tr>
+		<tr><th>Contamination<br/>status</th><th>Sample</th><th>Connected Components</th><th>Dip Means</th><th>Kraken</th></tr>
 	</table>
 	<div id="scatterContainerAnchor"></div>
 	<div id="scatterContainer" class="floatLeft">
