don't wrap scatter plot when window width is too narrow

--- a/share/acdc/assets/index.html
+++ b/share/acdc/assets/index.html
@@ -26,10 +26,10 @@
    /,'         ╚═╝  ╚═╝ ╚═════╝╚═════╝  ╚═════╝
   /'                                          		
 	</pre>
-	<table id="confidences" class="floatLeft">
+	<table id="confidences">
 	</table>
 	<div id="scatterContainerAnchor"></div>
-	<div id="scatterContainer" class="floatLeft">
+	<div id="scatterContainer">
 		<fieldset>
 			<legend><b>Select data:</b></legend>
 				<table>
