added own information in header

--- a/share/acdc/assets/index.html
+++ b/share/acdc/assets/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 	<pre class="figAnsi">
-        ,/      
-      ,'/           
-    ,' /        █████╗  ██████╗██████╗  ██████╗  (a)utomated 
+        ,/                                                                                                 2016, <a href="http://wiki.techfak.uni-bielefeld.de/didy/MarkusLux">Markus Lux</a>, Bielefeld University
+      ,'/                                                                                                        <a href="http://wiki.techfak.uni-bielefeld.de/didy">Computational Methods for the Analysis of the Diversity and Dynamics of Genomes (DiDy)</a>
+    ,' /        █████╗  ██████╗██████╗  ██████╗  (a)utomated                                                     Alpha-version, no warranties :)
   ,'  /_____,  ██╔══██╗██╔════╝██╔══██╗██╔════╝  (c)ontamination
 .'____    ,'   ███████║██║     ██║  ██║██║       (d)etection and 
      /  ,'     ██╔══██║██║     ██║  ██║██║       (c)onfidence estimation for NGS data 
