only show contmination confidence; separate cluster selection; always use grey color for unknown contigs

--- a/share/acdc/assets/index.html
+++ b/share/acdc/assets/index.html
@@ -52,6 +52,18 @@
 							</select>
 						</td>
 					</tr>
+					<tr>
+						<td>
+							Select number of clusters:
+						</td>
+						<td>
+							<input type="radio" class="numClusters" name="numClusters" value="1" id="numClusters1" checked> <label for="numClusters1">1</label>
+							<input type="radio" class="numClusters" name="numClusters" value="2" id="numClusters2"> <label for="numClusters2">2</label>
+							<input type="radio" class="numClusters" name="numClusters" value="3" id="numClusters3"> <label for="numClusters3">3</label>
+							<input type="radio" class="numClusters" name="numClusters" value="4" id="numClusters4"> <label for="numClusters4">4</label>
+							<input type="radio" class="numClusters" name="numClusters" value="5" id="numClusters5"> <label for="numClusters5">5</label>
+						</td>
+					</tr>					
 				</table>
 		</fieldset>
 		<div id="scatter"></div>
