introduced --aggressive mode to highlight/discard outlier contigs

--- a/share/acdc/assets/index.html
+++ b/share/acdc/assets/index.html
@@ -62,6 +62,7 @@
 							<input type="radio" class="numClusters" name="numClusters" value="3" id="numClusters3"> <label for="numClusters3">3</label>
 							<input type="radio" class="numClusters" name="numClusters" value="4" id="numClusters4"> <label for="numClusters4">4</label>
 							<input type="radio" class="numClusters" name="numClusters" value="5" id="numClusters5"> <label for="numClusters5">5</label>
+							&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" id="showOutliers" checked> <label for="showOutliers">Show outlier contigs</label>
 						</td>
 					</tr>					
 				</table>
