added hint for using arrow keys to navigate; removed pre margin

--- a/share/acdc/assets/index.html
+++ b/share/acdc/assets/index.html
@@ -24,7 +24,9 @@
      /  ,'     ██╔══██║██║     ██║  ██║██║       (c)onfidence estimation for NGS data 
     / ,'       ██║  ██║╚██████╗██████╔╝╚██████╗
    /,'         ╚═╝  ╚═╝ ╚═════╝╚═════╝  ╚═════╝
-  /'                                          		
+  /'      
+
+  	Use arrow keys ←→↑↓ to navigate.                                    		
 	</pre>
 	<table id="confidences">
 	</table>
