possibility to show/hide 16S sequence

--- a/share/acdc/assets/index.html
+++ b/share/acdc/assets/index.html
@@ -63,10 +63,16 @@
 							<input type="radio" class="numClusters" name="numClusters" value="2" id="numClusters2"> <label for="numClusters2">2</label>
 							<input type="radio" class="numClusters" name="numClusters" value="3" id="numClusters3"> <label for="numClusters3">3</label>
 							<input type="radio" class="numClusters" name="numClusters" value="4" id="numClusters4"> <label for="numClusters4">4</label>
-							<input type="radio" class="numClusters" name="numClusters" value="5" id="numClusters5"> <label for="numClusters5">5</label>
-							&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" id="showOutliers" checked> <label for="showOutliers">Show outlier contigs</label>
+							<input type="radio" class="numClusters" name="numClusters" value="5" id="numClusters5"> <label for="numClusters5">5</label>							
 						</td>
-					</tr>					
+					</tr>	
+					<tr>
+						<td colspan="2">
+							<input type="checkbox" id="showOutliers" checked> <label for="showOutliers">Show outlier contigs</label>
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							<input type="checkbox" id="highlight16S" checked> <label for="highlight16S">Highlight 16S</label>
+						</td>						
+					</tr>				
 				</table>
 		</fieldset>
 		<div id="scatter"></div>
