better 16S highlighting and possiblity to download 16S sequences from visualization

--- a/share/acdc/assets/index.html
+++ b/share/acdc/assets/index.html
@@ -70,7 +70,7 @@
 						<td colspan="2">
 							<input type="checkbox" id="showOutliers" checked> <label for="showOutliers">Show outlier contigs</label>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<input type="checkbox" id="highlight16S" checked> <label for="highlight16S">Highlight 16S</label>
+							<input type="checkbox" id="highlight16S" checked> <label for="highlight16S">Highlight 16S (click star to download)</label>
 						</td>						
 					</tr>				
 				</table>
