replace JSON export by reading YAML from JS; removed json-cpp dependency

--- a/share/acdc/assets/index.html
+++ b/share/acdc/assets/index.html
@@ -12,10 +12,10 @@
 	</script>
 	<script type="text/javascript" src="contigs.js"></script>
 	<script type="text/javascript" src="clusterinfo.js"></script>
-	<script type="text/javascript" src="data.js"></script>
 	<script type="text/javascript" src="d3.min.js"></script>
 	<script type="text/javascript" src="d3-tip.js"></script>
 	<script type="text/javascript" src="filesaver.min.js"></script>
+	<script type="text/javascript" src="js-yaml.min.js"></script>
 	<script type="text/javascript" src="functions.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
